[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Sam Marsh <sam.t.marsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
networkx = "^3.4.2"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
